--- a/Tydzień drugi.html
+++ b/Tydzień drugi.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Tydzień drugi</title>
 
 
     <link href="style.css" rel="stylesheet" type="text/css">
 
 </head>
 
-<body>
+<body class="webPage">
     <main>
-        <h1 class="headerMain">Tydzień drugi 27.05 - 2.06</h1>
+        <h1 class="headerMain__text">Tydzień drugi </h1>
         <article>
             <h3>29.05.2019</h3>
             <p> Dzisiaj konczy sie mój miesiąc miodowy. Najwyższy czas wrócić do Polski do noralnej codzienności. Ma to
