--- a/Tydzień pierwszy.html
+++ b/Tydzień pierwszy.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Tydzień pierwszy</title>
 
 
     <link href="style.css" rel="stylesheet" type="text/css">
 
 </head>
 
-<body>
+<body class="webPage">
     <main>
-        <h1 class="headerMain">Tydzień pierwszy 20-26.05.2019</h1>
+        <h1 class="headerMain__text">Tydzień pierwszy </h1>
 
         <article>
             <p>MIESIĄC MIODOWY</p>
