--- a/Tydzień trzeci.html
+++ b/Tydzień trzeci.html
@@ -12,9 +12,9 @@
 
 </head>
 
-<body>
+<body class="webPage">
     <main>
-        <h1 class="headerMain">Tydzień trzeci</h1>
+        <h1 class="headerMain__text">Tydzień trzeci</h1>
         <article>
             <h3>03.06.2019</h3>
             <p> Nowy trzeci tydzień rozpoczęty. Zaczynam powoli wdrażać się w nowy kontent.</p>
