--- a/index.html
+++ b/index.html
@@ -13,32 +13,47 @@
 
 </head>
 
-<body>
+<body class="webPage">
 
-    <header>
+    <header class="headerMain">
 
-        <h1 class="headerMain"><i>Artur Ciepielowski - Strona domowa</i></h1>
+        <h1 class="headerMain__text"><i>Artur Ciepielowski - Strona domowa</i></h1>
 
     </header>
 
-    <section>
-        <h2 class="sectionHeader">Kim jestem?</h2>
-        <p>Z zawodu jestem projektantem instalacji okrętowych. Projektowaniem zajmuje się od 5 lat. </p>
+    <section class="sectionHeader">
+        <h2 class="sectionHeader__text">Kim jestem?</h2>
+        <p class="paragraph">Z zawodu jestem projektantem instalacji okrętowych. Projektowaniem zajmuje się od 5 lat. Moim głownym narzedziem pracy są programy AutoCad i CADMATIC. 
+        </p>
         <br>
         <a href="#pamietniczek"> Przejdź do pamiętniczek</a>
         <br>
-        
+
 
 
 
 
     </section>
 
-    <img  src="Ty.jpg" alt="To ja" height="300">  
-    <section id="pamietniczek">
+    <img src="Ty.jpg" alt="To ja" height="300">
+
+    <section class="sectionHeader">
+
+        <h2 class="sectionHeader__text">Po co ta strona istnieje?</h2>
+
+        <article class="sectionHeader__article">
+            <p class="paragraph">Stworzyłem tą strone by zaangażować się w nowe hobby. Obecna praca zaczyna mnie coraz bardziej nudzić. Tworzenie stron wydaje się być kawałem dobrej zabawy. Chce również dać upust swojej kreatywności i stworzyć coś własnego.</p>
+
+        </article>
 
 
-        <h2 class="sectionHeader">Pamiętniczek</h2>
+
+    </section>
+
+    <section class="sectionHeader" id="pamietniczek">
+
+
+        <h2 class="sectionHeader__text">Pamiętniczek</h2>
 
 
         <a href="Tydzień pierwszy.html"> Tydzień pierwszy</a>
@@ -46,20 +61,23 @@
 
         <a href="Tydzień drugi.html"> Tydzień drugi</a>
         <br>
-        
+
         <a href="Tydzień trzeci.html"> Tydzień trzeci</a>
+        <br>
+
+        <a href="Tydzień czwarty.html"> Tydzień czwarty</a>
 
 
     </section>
     <br>
 
-    <footer>
-        <p>Zadanie domowe Artura Ciepielowskiego wszystkie tresci są obięte prawami Nibylandii.</p>
+    <footer class="footerBox">
+        <p class="paragrapgh">Zadanie domowe Artura Ciepielowskiego wszystkie tresci są obięte prawami Nibylandii.</p>
     </footer>
 
 
     <script src="main.js">
-        </script>
+    </script>
 </body>
 
 </html>
