--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 
 <body class="webPage">
 
+    <header class="navigation">
+        <a class="navigation__mainPage" href="index.html"> Strona główna</a>
+        <a class="navigation__diary" href="#pamietniczek"> Przejdź do pamiętniczek</a>
+    </header>
+
     <header class="headerMain">
 
         <h1 class="headerMain__text"><i>Artur Ciepielowski - Strona domowa</i></h1>
@@ -23,11 +28,12 @@
 
     <section class="sectionHeader">
         <h2 class="sectionHeader__text">Kim jestem?</h2>
-        <p class="paragraph">Z zawodu jestem projektantem instalacji okrętowych. Projektowaniem zajmuje się od 5 lat. Moim głownym narzedziem pracy są programy AutoCad i CADMATIC. 
+        <p class="paragraph">Z zawodu jestem projektantem instalacji okrętowych. Projektowaniem zajmuje się od 5 lat.
+            Moim głownym narzedziem pracy są programy AutoCad i CADMATIC.
         </p>
         <br>
-        <a href="#pamietniczek"> Przejdź do pamiętniczek</a>
-        <br>
+
+
 
 
 
@@ -42,7 +48,9 @@
         <h2 class="sectionHeader__text">Po co ta strona istnieje?</h2>
 
         <article class="sectionHeader__article">
-            <p class="paragraph">Stworzyłem tą strone by zaangażować się w nowe hobby. Obecna praca zaczyna mnie coraz bardziej nudzić. Tworzenie stron wydaje się być kawałem dobrej zabawy. Chce również dać upust swojej kreatywności i stworzyć coś własnego.</p>
+            <p class="paragraph">Stworzyłem tą strone by zaangażować się w nowe hobby. Obecna praca zaczyna mnie coraz
+                bardziej nudzić. Tworzenie stron wydaje się być kawałem dobrej zabawy. Chce również dać upust swojej
+                kreatywności i stworzyć coś własnego.</p>
 
         </article>
 
@@ -71,8 +79,15 @@
     </section>
     <br>
 
+
+<p class="paragraph__test--js">
+
+    
+
+</p>
+
     <footer class="footerBox">
-        <p class="paragrapgh">Zadanie domowe Artura Ciepielowskiego wszystkie tresci są obięte prawami Nibylandii.</p>
+        <p class="paragraph">Zadanie domowe Artura Ciepielowskiego wszystkie tresci są obięte prawami Nibylandii.</p>
     </footer>
 
 
