feat:page improvements

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Document</title>
 
 
-    <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="../homepage ZD/css/normalize.css" rel="stylesheet" type="text/css">
+    <link href="../homepage ZD/css/style.css" rel="stylesheet" type="text/css">
 
 
 </head>
@@ -17,7 +18,7 @@
 
     <header class="navigation">
         <a class="navigation__mainPage" href="index.html"> Strona główna</a>
-        <a class="navigation__diary" href="#pamietniczek"> Przejdź do pamiętniczek</a>
+        <a class="navigation__diary" href="#diary"> Przejdź do pamiętniczek</a>
     </header>
 
     <header class="headerMain">
@@ -41,7 +42,7 @@
 
     </section>
 
-    <img src="Ty.jpg" alt="To ja" height="300">
+    <img class="imageIndex1" src="../homepage ZD/img/Artur2.jpg" alt="To ja" height="300">
 
     <section class="sectionHeader">
 
@@ -58,40 +59,52 @@
 
     </section>
 
-    <section class="sectionHeader" id="pamietniczek">
+    <section class="sectionHeader" id="diary">
 
 
         <h2 class="sectionHeader__text">Pamiętniczek</h2>
 
 
-        <a href="Tydzień pierwszy.html"> Tydzień pierwszy</a>
+        <a class="" href="TydzieńPierwszy.html"> Tydzień pierwszy</a>
         <br>
 
-        <a href="Tydzień drugi.html"> Tydzień drugi</a>
+        <a href="TydzieńDrugi.html"> Tydzień drugi</a>
         <br>
 
-        <a href="Tydzień trzeci.html"> Tydzień trzeci</a>
+        <a href="TydzieńTrzeci.html"> Tydzień trzeci</a>
         <br>
 
-        <a href="Tydzień czwarty.html"> Tydzień czwarty</a>
+        <a href="TydzieńCzwarty.html"> Tydzień czwarty</a>
+        <br>
+
+        <a href="TydzieńPiąty.html"> Tydzień piąty</a>
 
 
     </section>
     <br>
 
 
-<p class="paragraph__test--js">
 
-    
+    <br>
 
-</p>
+
+    <button id="myButton--js">Funkcja testowa</button>
+
+
+    <br>
+    <br>
+    <p class="paragraph__test--js"></p>
+
+
+
+    </p>
 
     <footer class="footerBox">
         <p class="paragraph">Zadanie domowe Artura Ciepielowskiego wszystkie tresci są obięte prawami Nibylandii.</p>
     </footer>
 
 
-    <script src="main.js">
+    <script src="../homepage ZD/js/main.js">
     </script>
 </body>
 
