--- a/index.html
+++ b/index.html
@@ -16,9 +16,15 @@
 
 <body class="webPage">
 
-    <header class="navigation">
-        <a class="navigation__mainPage" href="index.html"> Strona główna</a>
-        <a class="navigation__diary" href="#diary"> Przejdź do pamiętniczek</a>
+    <header class="main-header">
+        <nav class="navigation">
+            <ul class="navigation__list">
+                <li class="navigation__iteam"> <a class="navigation__mainPage" href="index.html"> Strona główna</a></li>
+                <li class="navigation__iteam"> <a class="navigation__diary" href="#diary"> Przejdź do pamiętniczek</a>
+                </li>
+
+            </ul>
+        </nav>
     </header>
 
     <header class="headerMain">
