--- a/TydzieńCzwarty.html
+++ b/TydzieńCzwarty.html
@@ -8,8 +8,8 @@
     <title>Tydzień Czwarty</title>
 
 
-    <link href="../homepage ZD/css/normalize.css" rel="stylesheet" type="text/css">
-    <link href="../homepage ZD/css/style.css" rel="stylesheet" type="text/css">
+    <link href="css/normalize.css" rel="stylesheet" type="text/css">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
 
 </head>
 
