--- a/TydzieńCzwarty.html
+++ b/TydzieńCzwarty.html
@@ -43,7 +43,7 @@
             <p class=article__paragraph>Wracamy do domu. Nie udało mi się prawie nic przerobić z WTF ;/</p>
             <br>
 
-            <img class="imageW4" src="../homepage ZD/img/szyba.jpg" alt="rozbita szyba">
+            <img class="imageW4" src="img/szyba.jpg" alt="rozbita szyba">
 
         </article>
         <br>
