--- a/TydzieńDrugi.html
+++ b/TydzieńDrugi.html
@@ -45,7 +45,7 @@
             <h3 class=article__date>02.06.2019</h3>
             <p class=article__paragraph> Dzisiaj brak progresu, czekam na kolejne zadanie z 3ciego tygodnia.</p>
 
-            <img class="imageW2" src="../homepage ZD/img/czekanie.jpg" alt="Kosciotrup">
+            <img class="imageW2" src="img/czekanie.jpg" alt="Kosciotrup">
         </article>
         <br>
 
