--- a/TydzieńPiąty.html
+++ b/TydzieńPiąty.html
@@ -42,7 +42,7 @@
             <p class=article__paragraph>Nareszcie udało mi się naprawić rower! Dzisiaj zrobie wszystkie zadania domowe z piątego tygodnia WTF</p>
             <br>
 
-            <img class="imageW5" src="../homepage ZD/img/naprawaRower.jpg" alt="">
+            <img class="imageW5" src="img/naprawaRower.jpg" alt="">
 
         </article>
         <br>
