--- a/TydzieńTrzeci.html
+++ b/TydzieńTrzeci.html
@@ -40,7 +40,7 @@
             <p class=article__paragraph>Skończyłem robić prace domową</p>
             <br>
 
-            <img class="imageW3" src="../homepage ZD/img/0.jpg" alt="">
+            <img class="imageW3" src="img/0.jpg" alt="">
 
         </article>
         <br>
