--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     </section>
 
-    <img class="imageIndex1" src="../homepage ZD/img/Artur2.jpg" alt="To ja" height="300">
+    <img class="imageIndex1" src="img/Artur2.jpg" alt="To ja" height="300">
 
     <section class="sectionHeader">
 
