--- a/TydzieńPierwszy.html
+++ b/TydzieńPierwszy.html
@@ -26,7 +26,7 @@
         <article class="article">
             <p class=article__paragraph>MIESIĄC MIODOWY</p>
 
-            <img class="imageW1" src="../homepage ZD/img/slub.jpg" alt="Zdjecie slubne">
+            <img class="imageW1" src="img/slub.jpg" alt="Zdjecie slubne">
         </article>
         <br>
 
