--- a/TydzieńPiąty.html
+++ b/TydzieńPiąty.html
@@ -16,10 +16,21 @@
 <body class="webPage">
     <main>
 
-        <header class="navigation">
-            <a class="navigation__mainPage" href="index.html"> Strona główna</a>
-
+        <header class="main-header">
+            <nav class="navigation">
+                <ul class="navigation__list">
+                    <li class="navigation__iteam"> <a class="navigation__mainPage" href="index.html"> Strona główna</a></li>
+                    <li class="navigation__iteam"> <a class="navigation__mainPage" href="TydzieńPierwszy.html"> I</a></li>
+                    <li class="navigation__iteam"> <a class="navigation__mainPage" href="TydzieńDrugi.html"> II</a></li>
+                    <li class="navigation__iteam"> <a class="navigation__mainPage" href="TydzieńTrzeci.html">III</a></li>
+                    <li class="navigation__iteam"> <a class="navigation__mainPage" href="TydzieńCzwarty.html"> IV</a></li>
+                   
+                    </li>
+    
+                </ul>
+            </nav>
         </header>
+
 
         <h1 class="headerMain__text">Tydzień piąty</h1>
         <article class="article">
