--- a/TydzieńCzwarty.html
+++ b/TydzieńCzwarty.html
@@ -16,9 +16,19 @@
 <body class="webPage">
     <main>
 
-        <header class="navigation">
-            <a class="navigation__mainPage" href="index.html"> Strona główna</a>
-
+        <header class="main-header">
+            <nav class="navigation">
+                <ul class="navigation__list">
+                    <li class="navigation__iteam"> <a class="navigation__mainPage" href="index.html"> Strona główna</a></li>
+                    <li class="navigation__iteam"> <a class="navigation__mainPage" href="TydzieńPierwszy.html"> I</a></li>
+                    <li class="navigation__iteam"> <a class="navigation__mainPage" href="TydzieńDrugi.html"> II</a></li>
+                    <li class="navigation__iteam"> <a class="navigation__mainPage" href="TydzieńTrzeci.html">III</a></li>
+                    
+                    <li class="navigation__iteam"> <a class="navigation__mainPage" href="TydzieńPiąty.html"> V</a></li>
+                    </li>
+    
+                </ul>
+            </nav>
         </header>
 
         <h1 class="headerMain__text">Tydzień czwarty</h1>
