Added more responsivity

--- a/TydzieńCzwarty.html
+++ b/TydzieńCzwarty.html
@@ -53,7 +53,8 @@
             <p class=article__paragraph>Wracamy do domu. Nie udało mi się prawie nic przerobić z WTF ;/</p>
             <br>
 
-            <img class="imageW4" src="img/szyba.jpg" alt="rozbita szyba">
+            <div class="imageW"><img src="img/szyba.jpg" alt="rozbita szyba"></div>
+            
 
         </article>
         <br>
