--- a/TydzieńDrugi.html
+++ b/TydzieńDrugi.html
@@ -56,7 +56,8 @@
             <h3 class=article__date>02.06.2019</h3>
             <p class=article__paragraph> Dzisiaj brak progresu, czekam na kolejne zadanie z 3ciego tygodnia.</p>
 
-            <img class="imageW2" src="img/czekanie.jpg" alt="Kosciotrup">
+            <div class="imageW"> <img  src="img/czekanie.jpg" alt="Kosciotrup" width="700px"></div> 
+           
         </article>
         <br>
 
