--- a/TydzieńPierwszy.html
+++ b/TydzieńPierwszy.html
@@ -37,7 +37,7 @@
         <article class="article">
             <p class=article__paragraph>MIESIĄC MIODOWY</p>
 
-            <img class="imageW1" src="img/slub.jpg" alt="Zdjecie slubne">
+          <div class="imageW"> <img  src="img/slub.jpg" alt="Zdjecie slubne" width="700px"></div> 
         </article>
         <br>
 
