--- a/TydzieńPiąty.html
+++ b/TydzieńPiąty.html
@@ -53,7 +53,8 @@
             <p class=article__paragraph>Nareszcie udało mi się naprawić rower! Dzisiaj zrobie wszystkie zadania domowe z piątego tygodnia WTF</p>
             <br>
 
-            <img class="imageW5" src="img/naprawaRower.jpg" alt="">
+            <div class="imageW"><img src="img/naprawaRower.jpg" alt="Naprawa roweru"></div>
+            
 
         </article>
         <br>
