--- a/TydzieńTrzeci.html
+++ b/TydzieńTrzeci.html
@@ -17,7 +17,7 @@
     <main>
         <header class="main-header">
             <nav class="navigation">
-                <ul class="navigation__list">
+                <ul class="navigation__list navigation__list--js">
                     <li class="navigation__iteam"> <a class="navigation__mainPage" href="index.html"> Strona główna</a></li>
                     <li class="navigation__iteam"> <a class="navigation__mainPage" href="TydzieńPierwszy.html"> I</a></li>
                     <li class="navigation__iteam"> <a class="navigation__mainPage" href="TydzieńDrugi.html"> II</a></li>
@@ -27,7 +27,9 @@
                     </li>
     
                 </ul>
+                <button class="navigation__switcher navigation__switcher--js" aria-label="Open the menu">≡</button>
             </nav>
+            
         </header>
 
 
@@ -58,7 +60,8 @@
 
 
     </main>
-
+    <script src="js/secound.js">
+    </script>
 </body>
 
 </html>
