--- a/index.html
+++ b/index.html
@@ -18,13 +18,16 @@
 
     <header class="main-header">
         <nav class="navigation">
-            <ul class="navigation__list">
+            <ul class="navigation__list navigation__list--js">
                 <li class="navigation__iteam"> <a class="navigation__mainPage" href="index.html"> Strona główna</a></li>
                 <li class="navigation__iteam"> <a class="navigation__diary" href="#diary"> Przejdź do pamiętniczek</a>
                 </li>
 
             </ul>
+            <button class="navigation__switcher navigation__switcher--js" aria-label="Open the menu">≡</button>
         </nav>
+
+        
     </header>
 
     <header class="headerMain">
